[package]
name = "vulkan-exp"
version = "0.1.0"
authors = ["Sam Lakerveld <darkwater124@gmail.com>"]
edition = "2018"

[dependencies]
cgmath          = "0.17.0"
itertools       = "0.8.0"
png             = "0.14.0"
vulkano         = "0.11.1"
vulkano-shaders = "0.11.1"
vulkano-win     = "0.11.1"
winit           = "0.18.0"
